--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
+	<style type="text/css">
+		body {background-color: #A0A0A0}
+		::selection {
+		    background:#404040; 
+		    color:#ffffff;
+		}
+
+		::-moz-selection {
+		    background:#404040; 
+		    color:#ffffff;
+		}
+
+		::-webkit-selection {
+		    background:#404040; 
+		    color:#ffffff;
+		}
+	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
 	<title>ListenWhat</title>
 </head>
 <body>
+	<frameset rows="30%,30%,30%">
 	<h1 align="center">ListenWhat</h1>
 	<h3 align="right">--记录我个人的听音历史和听音目标的目录</h3>
 	<a href="https://listenwhat.top"></a>
 	<ul>
-		<li><a href="https://listenwhat.top/bach">Bach</a></li>
-		<li><a href="https://listenwhat.top/Beethoven">Beethoven</a></li>
-		<li><a href="https://listenwhat.top/Mahler">Mahler</a></li>
+		<li><a href="https://listenwhat.top/bach/bach.html">Bach</a></li>
+		<li><a href="https://listenwhat.top/Beethoven/beethoven.html">Beethoven</a></li>
+		<li><a href="https://listenwhat.top/Mahler/mahler.html">Mahler</a></li>
 	</ul>
 </body>
+</html>
