--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<h1 align="center">ListenWhat</h1>
-	<h4 align="center"><font color=#cc0000>Ï²»¶</font>&#160;&#160;&#160;&#160;Ìı¹ı&#160;&#160;&#160;&#160;<font color="#ffffff">Ã»Ìı¹ı</font></h4>
+	<h4 align="center"><font color=#cc0000>å–œæ¬¢</font>&#160;&#160;&#160;&#160;å¬è¿‡&#160;&#160;&#160;&#160;<font color="#ffffff">ä¸å–œæ¬¢</font></h4>
 	<a href="https://listenwhat.top"></a>
 	<ul>
 		<li class="Gustav-Mahler"><a href="Gustav Mahler/mahler.html">Gustav Mahler</a></li>
