Update Mahler and Beethoven

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
-	<meta lang="zh">
 	<meta charset="UFT-8">
 	<style type="text/css">
-		body {background-color: #808080}
+		body {background-color: dimgray}
+		a:link, a:visited {
+			text-decoration: none;
+		}
+		.listened {
+			color: sandybrown;
+		}
 		::selection {
 		    background:#404040; 
 		    color:#ffffff;
@@ -23,12 +28,12 @@
 </head>
 <body>
 	<h1 align="center">ListenWhat</h1>
-	<h4 align="center"><font color=#cc0000>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color="#ffffff">不喜欢</font></h4>
+	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color=darkgray>不喜欢</font></h4>
 	<a href="https://listenwhat.top"></a>
 	<ul>
-		<li class="Gustav-Mahler"><a href="Gustav Mahler/mahler.html">Gustav Mahler</a></li>
-		<li class="Johann-Sebastian-Bach"><a href="Johann Sebastian Bach/bach.html">Johann Sebastian Bach</a></li>
-		<li class="Ludwig-Van-Beethoven"><a href="Ludwig Van Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
+		<li ><a class="listened" href="Gustav Mahler/mahler.html">Gustav Mahler</a></li>
+		<li ><a class="listened" href="Johann Sebastian Bach/bach.html">Johann Sebastian Bach</a></li>
+		<li ><a class="listened" href="Ludwig Van Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
 	</ul>
 </body>
 </html>
