replace spaces with underscores

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color=darkgray>不喜欢</font></h4>
 	<a href="https://listenwhat.top"></a>
 	<ul>
-		<li ><a class="listened" href="Gustav Mahler/mahler.html">Gustav Mahler</a></li>
-		<li ><a class="listened" href="Johann Sebastian Bach/bach.html">Johann Sebastian Bach</a></li>
-		<li ><a class="listened" href="Ludwig Van Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
+		<li ><a class="listened" href="Gustav_Mahler/mahler.html">Gustav Mahler</a></li>
+		<li ><a class="listened" href="Johann_Sebastian_Bach/bach.html">Johann Sebastian Bach</a></li>
+		<li ><a class="listened" href="Ludwig_Van_Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
 	</ul>
 </body>
 </html>
