correct my expression

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 	<h1 align="center">ListenWhat</h1>
-	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color=darkgray>不喜欢</font></h4>
+	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color=darkgray>没听过</font></h4>
 	<a href="https://listenwhat.top"></a>
 	<ul>
 		<li ><a class="listened" href="Gustav_Mahler/mahler.html">Gustav Mahler</a></li>
