--- a/index.html
+++ b/index.html
@@ -1,39 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-	<meta charset="UFT-8">
-	<style type="text/css">
-		body {background-color: dimgray}
-		a:link, a:visited {
-			text-decoration: none;
-		}
-		.listened {
-			color: sandybrown;
-		}
-		::selection {
-		    background:#404040; 
-		    color:#ffffff;
-		}
-		::-moz-selection {
-		    background:#404040; 
-		    color:#ffffff;
-		}
-		::-webkit-selection {
-		    background:#404040; 
-		    color:#ffffff;
-		}
-	</style>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
+	<link rel="stylesheet" href="css/style.css">
 	<title>ListenWhat</title>
 </head>
 <body>
-	<h1 align="center">ListenWhat</h1>
-	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;听过&#160;&#160;&#160;&#160;<font color=darkgray>没听过</font></h4>
-	<a href="https://listenwhat.top"></a>
+	<div style="text-align: center; font-family: Marck Script; font-size: 50px; color: #A1C0D1;">ListenWhat</div>
+	<h4 align="center"><font color=red>喜欢</font>&#160;&#160;&#160;&#160;<font color=#A1C0D1>听过</font>&#160;&#160;&#160;&#160;<font color=gray>没听过</font></h4>
+	<br />
 	<ul>
-		<li ><a class="listened" href="Gustav_Mahler/mahler.html">Gustav Mahler</a></li>
-		<li ><a class="listened" href="Johann_Sebastian_Bach/bach.html">Johann Sebastian Bach</a></li>
-		<li ><a class="listened" href="Ludwig_Van_Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
+		<li ><a class="gustav-mahler" href="Gustav_Mahler/mahler.html">Gustav Mahler</a></li>
+		<li ><a class="johann-sebastian-bach" href="Johann_Sebastian_Bach/bach.html">Johann Sebastian Bach</a></li>
+		<li ><a class="ludwig-van-beethoven" href="Ludwig_Van_Beethoven/beethoven.html">Ludwig Van Beethoven</a></li>
 	</ul>
 </body>
 </html>
