--- a/Gustav_Mahler/mahler.html
+++ b/Gustav_Mahler/mahler.html
@@ -27,8 +27,7 @@
     <body class="vscode-light">
         <div class="composer">Gustav Mahler</div>
 <h2 id="其他说明">其他说明</h2>
-<p>**奥托·克伦佩勒(Otto Klemperer)**与马勒是好友关系
-**布鲁诺·瓦尔特(Bruno Walter)**是马勒的助手</p>
-
+<p><strong>奥托·克伦佩勒(Otto Klemperer)</strong>与马勒是好友关系
+<strong>布鲁诺·瓦尔特(Bruno Walter)</strong>是马勒的助手</p>
     </body>
     </html>
